# break-reminder

./: .gitignore  Cargo.toml  build.rs  icon.rc  manifest.xml
media/: assets.afdesign  icon-ico.sh
src/: app.rs  break_reminder.rs  logger.rs  main.rs  message.rs  message_box.rs  notifier.rs  only_instance.rs  pause.rs
src/active_app/: interval_dialog.rs  mod.rs  pause_dialog.rs  tray_icon.rs  window.rs
src/app/: mod.rs
src/app/active_app/: mod.rs
src/dialog/: mod.rs  number_input_dialog.rs
