[package]
name = "break-reminder"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.58", features = [
	"Win32_Security",               # Process mutex
	"Win32_System_Threading",       # Process mutex
	"Win32_UI_WindowsAndMessaging", # Message Box
] }
windows-result = { version = "0.2" }

thiserror = "1"

tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

uuid = { version = "1.11", features = ["v4"] }

winit = { version = "0.30", features = ["rwh_06"] }
raw-window-handle = "0.6"
tray-icon = "0.14"

[build-dependencies]
embed-resource = "2.4"
